--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -27,9 +27,7 @@ msgid "Студент РГПУ им. Герцена, ИИТТО, ИВТ 2 кур
 msgstr "Student of the Russian State Pedagogical University named after. Herzen, IITTO, IVT 2nd year"
 
 #: .\portf\templates\index.html:8
-msgid ""
-"Данное портфолио создано студентом РГПУ имени Герцена с целью размещения на "
-"нем информации о выполненных работах"
+msgid "Данное портфолио создано студентом РГПУ имени Герцена с целью размещения на нем информации о выполненных работах"
 msgstr "This portfolio was created by a student of the Herzen State Pedagogical University for the purpose of placement on information about completed work"
 
 #: .\portf\templates\index.html:10
