--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-13 16:48+0300\n"
+"POT-Creation-Date: 2024-02-13 17:12+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,39 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+#: .\portf\templates\explanation.html:6 .\portf\templates\kp.html:6
+#: .\portf\templates\prog.html:6
+msgid "Назад"
+msgstr "Back"
+
+#: .\portf\templates\explanation.html:9
+msgid "Создание Сайта"
+msgstr "Website creation"
+
+#: .\portf\templates\explanation.html:12
+msgid "1) был создан проект с использованием django-admin "
+msgstr "1) a project was created using django-admin"
+
+#: .\portf\templates\explanation.html:13
+msgid ""
+"2) далее был настроен Django в файлах settings и связан с приложением Django "
+msgstr ""
+"2) Django was then configured in the settings files and associated with the "
+"Django application"
+
+#: .\portf\templates\explanation.html:14
+msgid "3) проект был связан с репозиторием GitHub для более удобного коммита"
+msgstr "3) the project was linked to a GitHub repository for easier committing"
+
+#: .\portf\templates\explanation.html:15
+msgid "4) далее был создан файл vercel.json для связи сайта с Vercel"
+msgstr ""
+"4) then the vercel.json file was created to connect the site with Vercel"
+
+#: .\portf\templates\explanation.html:32
+msgid "5) GitHub был подключен к Vercel и практически автоматически задеплоен"
+msgstr "5) GitHub was connected to Vercel and deployed almost automatically"
 
 #: .\portf\templates\index.html:7
 msgid "Суворов Роман"
@@ -44,10 +77,26 @@ msgstr "Link to replit profiles with completed work:"
 msgid "Пояснение"
 msgstr "Explanation"
 
-#: .\portf\templates\index.html:17
+#: .\portf\templates\index.html:17 .\portf\templates\prog.html:9
 msgid "ПРОГ4"
 msgstr "PROG4"
 
 #: .\portf\templates\index.html:21
 msgid "КП"
 msgstr "CW"
+
+#: .\portf\templates\kp.html:9
+#, fuzzy
+#| msgid "КП"
+msgid "КП "
+msgstr "CW"
+
+#: .\portf\templates\kp.html:14 .\portf\templates\prog.html:14
+#: .\portf\templates\prog.html:18 .\portf\templates\prog.html:23
+#: .\portf\templates\prog.html:27
+msgid "ЛР1"
+msgstr "LR1"
+
+#: .\portf\templates\kp.html:18
+msgid "ЛР2"
+msgstr "LR2"
