--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-13 17:43+0300\n"
+"POT-Creation-Date: 2024-02-16 17:12+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,15 +29,13 @@ msgstr "Back"
 msgid "КП "
 msgstr "CW"
 
-#: .\portf\templates\cw.html:14 .\portf\templates\prog.html:14
-#: .\portf\templates\prog.html:18 .\portf\templates\prog.html:23
-#: .\portf\templates\prog.html:27
-msgid "ЛР1"
-msgstr "LR1"
-
-#: .\portf\templates\cw.html:18
-msgid "ЛР2"
-msgstr "LR2"
+#: .\portf\templates\cw.html:14 .\portf\templates\cw.html:18
+#: .\portf\templates\prog.html:14 .\portf\templates\prog.html:18
+#: .\portf\templates\prog.html:23 .\portf\templates\prog.html:27
+#, fuzzy
+#| msgid "ЛР1"
+msgid "ЛР"
+msgstr "LW"
 
 #: .\portf\templates\explanation.html:9
 msgid "Создание Сайта"
@@ -86,8 +84,8 @@ msgstr ""
 "University for the purpose of placement on information about completed work"
 
 #: .\portf\templates\index.html:11
-msgid "Ссылка на профили replit с выполненными работами:"
-msgstr "Link to replit profiles with completed work:"
+msgid "Ссылки:"
+msgstr "Links"
 
 #: .\portf\templates\index.html:13
 msgid "Пояснение"
@@ -100,3 +98,4 @@ msgstr "PROG4"
 #: .\portf\templates\index.html:21
 msgid "КП"
 msgstr "CW"
+
